<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/to_start_please_enter_these_informations"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/_1_car_autonomy_100_charged"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:padding="3dp"
                android:src="@drawable/charged" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/autonomy"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/boarder"
                android:digits="0123456789"
                android:gravity="center"
                android:hint="@string/in_km"
                android:textSize="20sp"
                android:textStyle="bold"

                />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/_2_total_distance"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:contentDescription="TODO"
                android:padding="3dp"
                android:src="@drawable/car_distance" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totaldistance"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/boarder"
                android:digits="0123456789"
                android:gravity="center"
                android:hint="@string/in_km"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/_3_average_car_speed"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:padding="3dp"
                android:src="@drawable/meter" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/speedaverege"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/boarder"
                android:digits="0123456789"
                android:gravity="center"
                android:hint="@string/in_km_h"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:text="@string/_4_time_to_charge_the_car"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="229dp"
            android:layout_height="58dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="47dp"
                android:padding="3dp"
                android:src="@drawable/temps" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/car_charge_time"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/boarder"
                android:digits="0123456789"
                android:gravity="center"
                android:hint="Hour"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/angry_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="60"
                android:text="@string/calculate"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button


                android:id="@+id/buttonChangeLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"

                android:background="@drawable/button_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="60"
                android:text="@string/change_language"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
android:layout_marginBottom="10dp"
            android:id="@+id/copyrithes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="60"
            android:text="@string/copyrights"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>
</ScrollView>
